fix: update overflow property for better content visibility in container template edit dialog

--- a/privacyidea/static_new/src/app/components/token/container-templates/dialogs/container-template-edit-dialog/container-template-edit-dialog.component.scss
+++ b/privacyidea/static_new/src/app/components/token/container-templates/dialogs/container-template-edit-dialog/container-template-edit-dialog.component.scss
@@ -9,7 +9,7 @@
   gap: var(--global-gap);
   width: 1456px;
   height: 64vh;
-  overflow-y: clip;
+  overflow-y: auto;
 }
 
 .default-template-card-row {
@@ -70,6 +70,5 @@
   display: flex;
   flex-direction: column;
   gap: var(--half-global-gap);
-  overflow: auto;
   padding: var(--half-global-padding);
 }
